Bug 684865 - Do not return 0-length strings. r=mbanner